--- a/dune
+++ b/dune
@@ -1,5 +1,10 @@
 (executable
- (name hello)
+ (name template)
  (libraries dream))
+
+(rule
+ (targets template.ml)
+ (deps template.eml.ml)
+ (action (run dream_eml %{deps} --workspace %{workspace_root})))
 
 (data_only_dirs _esy esy.lock lib node_modules)
