Attempt 3: Example D with stateful forms.

--- a/dune
+++ b/dune
@@ -1,10 +1,11 @@
 (executable
- (name template)
- (libraries dream))
+ (name form)
+ (libraries dream)
+ (preprocess (pps lwt_ppx)))
 
 (rule
- (targets template.ml)
- (deps template.eml.ml)
+ (targets form.ml)
+ (deps form.eml.ml)
  (action (run dream_eml %{deps} --workspace %{workspace_root})))
 
 (data_only_dirs _esy esy.lock lib node_modules)
